Move my css changes to scss. Fix an issue with the way eff-button wraps

--- a/banner_content/netneutrality17/sass/netneutrality.scss
+++ b/banner_content/netneutrality17/sass/netneutrality.scss
@@ -23,6 +23,7 @@ $black: #000000;
   $sans-serif: "Montserrat";
 
   body {
+    background: transparent;
     font-family: $sans-serif;
     color: $black;
   }
@@ -140,14 +141,24 @@ $black: #000000;
         }
       }
     }
-    @media screen and (max-width: 401px) {
+    @media screen and (max-width: 766px) {
+      text-align: center;
+
+      p.atnt {
+        float: none !important;
+      }
+
+      .eff-button {
+        display: inline-block;
+      }
+
       #frame1 p,
       #frame2 p {
         clear:both;
         font-size:1.75rem;
       }
-      #frame1 span img { // "blocked" image
-        margin: -3.0rem 0 4rem -1rem;
+      #frame1 span img { /* "blocked" image */
+        margin: 0 0 4rem 0;
         max-width:300px;
       }
       #frame1 .button-container .eff-button {
@@ -163,3 +174,8 @@ $black: #000000;
       }
     }
   }
+
+
+.modal-open .modal {
+  overflow-y: hidden !important;
+}
